# pipelines

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
hardware/custom_stepper/: custom_stepper.h  custom_stepper.ino  line_queue.h  state_machine.h
hardware/scripts/: delay_test.py  serialer.py  shot_scratch.py  shot_utils.py  time_scratch.py  ws_client.py  ws_server.py
include/: buffer.h  camel_buffer.h  capture_signaler.h  common_data.h  config_store.h  contour_tree.h  file_reader.h  fk_matrices.h  fps_counter.h  frame_buffer.h  frame_display.h  frame_node.h  frame_processor.h  frame_reader.h  frame_recorder_utils.h  frame_syncer.h  ik_solver.h  imgui_image_node.h  multi_gui_node.h  node.h  orchestrator.h  port.h  port_set.h  some.h  trajectory_store.h  types.h  utilities.h  utils.h  window_node.h
scripts/: alg_lin.py  angle_tester.py  camera_assignment.xml  camera_reader.py  file_assignment.xml  file_reader.py  gstreamer_cmds.txt  left_intrinsic.npz  left_params.xml  lin_alg.py  right_intrinsic.npz  right_params.xml  sim_capture.py  single_camera_calibrate.py  stereoParams.xml  stereo_camera_calibration.py  stereo_camera_validation.py  stereo_tester.py  tester_2.py  time_scratch.py
scripts/ik_scripts/: analytical_ik.py  draw_origins.py  fk.py  fk_numpy.py  gui.py  ik_helpers.py  lambdified_function.pkl  poses.py  slider.py
scripts/param_backup/: left_params.xml  right_params.xml  stereoParams.xml
scripts/param_backup/ground_params/: left_params.xml  right_params.xml  stereoParams.xml
src/: bare_gui.cpp  ik_service.cpp  imconfig.cpp  multi_file.cpp  poses.cpp  single_cam.cpp  some.cpp  stereo_record.cpp  test.cpp
